--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,8 @@
-version: '2'
+version: '3'
 services:
-  postgres:
-    image: kartoza/postgis:13.0
-    ports:
-      - 15432:5432
-    volumes:
-      - ./data/postgres:/opt/postgres/data
-    environment:
-      - RECREATE_DATADIR=TRUE
-      - DATADIR=/opt/postgres/data
-      - POSTGRES_DB=cnefe
-      - POSTGRES_USER=cnefe
-      - POSTGRES_PASSWORD=cnefe
+  scripts:
+      build: .
+      volumes:
+        - ./data:/data
+        - .:/scripts
+        - ./data/output:/output
