--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ services:
   scripts:
       build: .
       volumes:
-        - ./data:/data
-        - .:/scripts
-        - ./data/output:/output
+        # where zips with midpoint will be saved
+        - /home/user/cnefe/output:/output 
+        # Path to source files, as available from IBGE FTP 
+        - /home/user/cnefe/downloads/geoftp.ibge.gov.br/recortes_para_fins_estatisticos/malha_de_setores_censitarios/censo_2010/base_de_faces_de_logradouros_versao_2019:/data
+        # - /home/user/cnefe/workdir:/workdir Uncomment this to inspect intermediate files
+        # - .:/scripts For development mode
