--- a/package.json
+++ b/package.json
@@ -1,19 +1,8 @@
 {
   "name": "cnefe",
   "version": "0.0.1",
-  "description": "Command-line tools to work with CNEFE data",
-  "main": "index.js",
-  "repository": "git@github.com:vgeorge/cnefe-scripts.git",
+  "description": "CNEFE data",
+  "repository": "git@github.com:vgeorge/cnefe.git",
   "author": "Vitor George <vitor.george@gmail.com>",
-  "license": "MIT",
-  "bases": {
-    "cnefe": "ftp://ftp.ibge.gov.br/Censos/Censo_Demografico_2010/Cadastro_Nacional_de_Enderecos_Fins_Estatisticos/",
-    "logradouros": "ftp://geoftp.ibge.gov.br/recortes_para_fins_estatisticos/malha_de_setores_censitarios/censo_2010/base_de_faces_de_logradouros"
-  },
-  "dependencies": {
-    "commander": "^2.15.1"
-  },
-  "devDependencies": {
-    "eslint-config-google": "^0.9.1"
-  }
+  "license": "MIT"
 }
